--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    background-color:green;
 }
 ol, ul {
 	list-style: none;
@@ -140,7 +141,7 @@ a {
 body {
   font-family: Roboto, Calibri, Helvetica, Arial, sans-serif;
   font-weight: 300;
-  background-color: #f4f3f2;
+  background-color: green;
   color: #0f0f0f;
   font-size: 1.125em;
 }
