color changed to hex.

--- a/styles/main.css
+++ b/styles/main.css
@@ -141,7 +141,7 @@ a {
 body {
   font-family: Roboto, Calibri, Helvetica, Arial, sans-serif;
   font-weight: 300;
-  background-color: green;
+  background-color: #008000;
   color: #0f0f0f;
   font-size: 1.125em;
 }
