--- a/styles/main.css
+++ b/styles/main.css
@@ -356,7 +356,9 @@ hr {
 
 .form fieldset {
     border: 1px solid rgb(70, 70, 70);
+    border-radius:15px;
     padding: 0 15px;
+    margin:1em;
 }
 
 .form button {
