--- a/styles/main.css
+++ b/styles/main.css
@@ -362,7 +362,7 @@ hr {
 }
 
 .form button {
-    border: none;
+    border: 2px solid  #2F4F4F;
     padding: .5em 2em;  
     margin-top: 1em;
     text-transform: uppercase;
@@ -370,6 +370,7 @@ hr {
     background-color:  #e79433;
     color: #f4f3f2;
     font-family: "roboto";
+    border-radius:10px;
 }
 
 .form button:hover {
